fix location of previewVisible state

--- a/src/styles/Preview.css
+++ b/src/styles/Preview.css
@@ -158,3 +158,6 @@
 .preview ul {
     padding-left: 0;
 }
+.main > .preview {
+    grid-area: 1 / 1/ -1 / -1;
+}
